# clipboard-x

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml  release-check.yml
scripts/: generate-latest-json.js  upgrade-version.js
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.claude/: settings.local.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  database.rs  logger.rs  main.rs  telegram.rs
src/api/: commands.ts
src/components/: ArchivePage.tsx  ClipboardItemCard.tsx  FavoriteList.tsx  HistoryList.tsx  MainPanel.tsx  PanelHeader.tsx  SettingsPanel.tsx
src/hooks/: useTheme.ts
src/store/: useClipboardStore.ts
src/utils/: platform.ts
